--- a/public/index.html
+++ b/public/index.html
@@ -58,6 +58,8 @@
         <script src="scripts/services/comicvine.js"></script>
         <script src="scripts/controllers/team.js"></script>
         <script src="scripts/services/team.js"></script>
+        <script src="scripts/services/game.js"></script>
+        <script src="scripts/controllers/game.js"></script>
         <!-- endbuild -->
 </body>
 </html>
