--- a/public/index.html
+++ b/public/index.html
@@ -59,6 +59,7 @@
         <script src="scripts/services/team.js"></script>
         <script src="scripts/services/game.js"></script>
         <script src="scripts/controllers/game.js"></script>
+        <script src="scripts/controllers/gameroom.js"></script>
         <!-- endbuild -->
 </body>
 </html>
