--- a/public/index.html
+++ b/public/index.html
@@ -60,6 +60,7 @@
         <script src="scripts/services/game.js"></script>
         <script src="scripts/controllers/game.js"></script>
         <script src="scripts/controllers/gameroom.js"></script>
+        <script src="scripts/directives/ig-team.js"></script>
         <!-- endbuild -->
 </body>
 </html>
