--- a/public/index.html
+++ b/public/index.html
@@ -22,9 +22,6 @@
     <div ng-view=""></div>
     </div>
 
- 
-
-
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
      <script>
        !function(A,n,g,u,l,a,r){A.GoogleAnalyticsObject=l,A[l]=A[l]||function(){
@@ -45,7 +42,8 @@
     <script src="angular-resource/angular-resource.js"></script>
     <script src="angular-route/angular-route.js"></script>
     <script src="angular-md5/angular-md5.js"></script>
-
+    <script src="angular-bootstrap/ui-bootstrap.js"></script>
+    <script src="angular-bootstrap/ui-bootstrap-tpls.js"></script>
 
         <!-- build:js({.tmp,public}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
@@ -61,6 +59,7 @@
         <script src="scripts/controllers/game.js"></script>
         <script src="scripts/controllers/gameroom.js"></script>
         <script src="scripts/directives/ig-team.js"></script>
+        <script src="scripts/controllers/dashmodalinstance.js"></script>
         <!-- endbuild -->
 </body>
 </html>
