major changes to the game interface. Created directive specifically for managing team members, revamped UI. Implemented typing-based selection of characters and moves, initiated by keyboard shortcuts thanks to angular-hotkeys.

--- a/public/index.html
+++ b/public/index.html
@@ -44,6 +44,7 @@
     <script src="angular-md5/angular-md5.js"></script>
     <script src="angular-bootstrap/ui-bootstrap.js"></script>
     <script src="angular-bootstrap/ui-bootstrap-tpls.js"></script>
+    <script src="angular-hotkeys/build/hotkeys.js"></script>
 
         <!-- build:js({.tmp,public}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
@@ -60,6 +61,7 @@
         <script src="scripts/controllers/gameroom.js"></script>
         <script src="scripts/directives/ig-team.js"></script>
         <script src="scripts/controllers/dashmodalinstance.js"></script>
+        <script src="scripts/directives/ig-battle-team.js"></script>
         <!-- endbuild -->
 </body>
 </html>
